util/new_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbotnp
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30036
  selector:
    app: microbot
  type: NodePort
