util/svc_default_http_backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
    k8s-app: glbc
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: GLBCDefaultBackend
  name: default-http-backend
  namespace: kube-system
spec:
  ports:
  - name: http
    nodePort: 31810
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: glbc
  sessionAffinity: None
  type: NodePort
